# syx

./: .gitignore  .gitmodules  README.md  todo.md
dof/: CMakeLists.txt  todo.md
dof/blender/: scene.blend
dof/config/: CMakeLists.txt
dof/curve/: CMakeLists.txt
dof/data/: config.json  physics_validation.glb  scene.glb
dof/font/: CMakeLists.txt
dof/game/: CMakeLists.txt  CommonTasks.cpp  CommonTasks.h  Config.cpp  Config.h  DBEvents.cpp  DBEvents.h  DebugDrawer.cpp  DebugDrawer.h  DebugInput.cpp  DebugInput.h  EnkiLocalScheduler.cpp  EnkiLocalScheduler.h  EventValidator.cpp  EventValidator.h  File.cpp  File.h  Fragment.cpp  Fragment.h  FragmentAI.ispc  FragmentSpawner.cpp  FragmentSpawner.h  FragmentStateMachine.cpp  FragmentStateMachine.h  Game.cpp  Game.h  GameBuilder.cpp  GameBuilder.h  GameDatabase.cpp  GameDatabase.h  GameInput.cpp  GameInput.h  GameMath.cpp  GameMath.h  GameScheduler.cpp  GameScheduler.h  GameTaskArgs.cpp  GameTaskArgs.h  GameTime.cpp  GameTime.h  (+37 more)
dof/generics/: CMakeLists.txt
dof/glew/: CMakeLists.txt
dof/glm/: CMakeLists.txt
dof/imgui/: CMakeLists.txt
dof/ispc/: CMakeLists.txt
dof/loader/: CMakeLists.txt
dof/math/: CMakeLists.txt
dof/ogl/: CMakeLists.txt  Debug.cpp  Debug.h  DebugLinePassTable.h  ParticleRenderer.cpp  ParticleRenderer.h  Quad.h  QuadPassTable.h  Renderer.cpp  Renderer.h  RendererTableAdapters.cpp  RendererTableAdapters.h  Shader.cpp  Shader.h
dof/performance/: CMakeLists.txt  PerformanceDB.cpp  PerformanceDB.h  last_run.txt  main.cpp
dof/physics/: BoxBox.cpp  BoxBox.h  CMakeLists.txt  Clip.cpp  Clip.h  CollisionDetection.ispc  ConstraintSolver.cpp  ConstraintSolver.h  ConstraintSolving.ispc  Constraints.cpp  Constraints.h  ConstraintsTableBuilder.cpp  ConstraintsTableBuilder.h  ConvexHull.cpp  ConvexHull.h  Dynamics.h  Forces.ispc  Geometric.cpp  Geometric.h  GridBroadphase.cpp  GridBroadphase.h  Integrator.ispc  IslandGraph.cpp  IslandGraph.h  IspcMath.h  Mass.cpp  Mass.h  MeshNarrowphase.cpp  MeshNarrowphase.h  Narrowphase.cpp  Narrowphase.h  NarrowphaseData.h  NotIspc.h  PGSSolver.cpp  PGSSolver.h  PGSSolver1D.cpp  PGSSolver1D.h  Physics.cpp  Physics.h  PhysicsConfig.h  (+16 more)
dof/profile/: CMakeLists.txt  Precompile.h
dof/renderer/: BlitPass.cpp  BlitPass.h  CMakeLists.txt  Debug.cpp  Debug.h  DefaultFont.cpp  DefaultFont.h  FontPass.cpp  FontPass.h  ParticleRenderer.h  Precompile.h  Quad.h  QuadPassTable.h  Renderer.cpp  Renderer.h  RendererTableAdapters.h  Shader.cpp  Shader.h  VertexAttributes.h
dof/scheduler/: CMakeLists.txt  Scheduler.h
dof/sokol/: CMakeLists.txt
dof/stb/: CMakeLists.txt  STBInterface.cpp  STBInterface.h
dof/table/: AppBuilder.cpp  AppBuilder.h  CMakeLists.txt  CachedRow.h  ChainedTaskImpl.cpp  ChainedTaskImpl.h  DBTypeID.h  Database.h  DatabaseID.h  Events.cpp  Events.h  IAppModule.h  ILocalScheduler.h  IRow.h  ITaskImpl.h  Queries.h  QueryAlias.h  RelationModule.cpp  RelationModule.h  RuntimeDatabase.cpp  RuntimeDatabase.h  RuntimeTable.cpp  RuntimeTable.h  SlimRow.h  SparseRow.h  StableElementID.h  TLSTaskImpl.h  Table.h  TableName.h  TableOperations.h  TypeId.h
dof/test/: AppTaskTest.cpp  AssetServiceTest.cpp  BroadphaseTest.cpp  CMakeLists.txt  ConstraintTest.cpp  ConvexHullTest.cpp  DynamicBitsetTest.cpp  HashMapTest.cpp  InputStateMachineTest.cpp  IntMathTest.cpp  IslandGraphTest.cpp  MassTest.cpp  MeshNarrowphaseTest.cpp  NarrowphaseTest.cpp  PagedVectorTest.cpp  PhysicsSceneTest.cpp  PhysicsZTest.cpp  Precompile.h  RateLimiterTest.cpp  RatioTest.cpp  SceneTransitionTest.cpp  SlimRowTest.cpp  SolverTest.cpp  SparseRowTest.cpp  TaskImplTest.cpp  Test.cpp  TestApp.cpp  TestApp.h  TestAssert.h  TestGame.cpp  TestGame.h  TestSceneAsset.cpp  TestSceneAsset.h  TransformTest.cpp
dof/transform/: CMakeLists.txt
dof/win32/: CMakeLists.txt  Main.cpp  triangle-sapp.glsl  triangle-sapp.h
syx/: CMakeLists.txt  syx.sln
syx/Engine.Lib/: Engine.Lib.vcxproj
syx/Engine.Shared/: App.cpp  App.h  AppPlatform.cpp  AppPlatform.h  AppRegistration.cpp  AppRegistration.h  CMakeLists.txt  Camera.h  DebugDrawer.cpp  DebugDrawer.h  Engine.Shared.vcxitems  ImGuiImpl.cpp  ImGuiImpl.h  LuaGameObject.cpp  LuaGameObject.h  Macros.h  MappedBuffer.h  Precompile.h  Space.cpp  Space.h  SyxInterface.cpp  UniqueID.h  Util.cpp  Util.h
syx/Imgui.Lib/: Imgui.Lib.vcxproj
syx/Imgui.Shared/: Imgui.Shared.vcxitems
syx/Win32.App/: Stub.cpp  Win32.App.vcxproj  Win32.App.vcxproj.filters
syx/Win32.Platform/: Win32.Platform.vcxproj
syx/Win32.Shared/: AppPlatformWin32.cpp  AppPlatformWin32.h  CMakeLists.txt  DirectoryWatcher32.cpp  DirectoryWatcher32.h  KeyboardInputWin32.cpp  KeyboardInputWin32.h  Precompile.h  Win32.Shared.vcxitems  mainWin32.cpp
syx/data/: imgui.ini  scene.json
syx/ecx/: AnyTuple.h  AnyType.h  AppContext.h  BlockVector.h  BlockVectorTypeErasedContainerTraits.h  CMakeLists.txt  CommandBuffer.h  CommandBufferSystem.h  EntityCommandBuffer.h  EntityFactory.h  EntityModifier.h  EntityRegistry.h  FunctionTraits.h  JobGraph.h  JobInfo.h  LinearEntityRegistry.h  LinearView.h  RuntimeTraits.h  Scheduler.h  SchedulerComponent.h  SparseSet.h  System.h  SystemRegistry.h  TypeErasedContainer.h  TypeId.h  TypeInfo.h  TypeList.h  View.h
syx/gfx/: App.cpp  App.h  AppPlatform.cpp  AppPlatform.h  BufferAttribs.cpp  BufferAttribs.h  Camera.cpp  Camera.h  DebugDrawer.cpp  DebugDrawer.h  EditorNavigator.cpp  EditorNavigator.h  FileSystem.cpp  FileSystem.h  Gameobject.cpp  Gameobject.h  GraphicsSystem.cpp  GraphicsSystem.h  Handle.h  ImGuiImpl.cpp  ImGuiImpl.h  KeyboardInput.cpp  KeyboardInput.h  LuaGameObject.cpp  LuaGameObject.h  LuaSpace.cpp  LuaSpace.h  MappedBuffer.h  MessageQueueProvider.h  Model.cpp  Model.h  ModelLoader.cpp  ModelLoader.h  Precompile.h  ProjectLocator.cpp  ProjectLocator.h  Shader.cpp  Shader.h  Space.cpp  Space.h  (+13 more)
syx/ispc/: CMakeLists.txt  ispc_compile.bat
syx/lua/: CMakeLists.txt  lua.vcxproj  lua.vcxproj.filters
syx/perftest/: CMakeLists.txt  main.cpp
syx/poa/: CMakeLists.txt  CollisionDetection.ispc  Constraints.ispc  Inertia.ispc  Integrator.cpp  Integrator.h  (+10 more)
(+843 files in other folders)
